--- a/src/app/medidor/page/listar/listar.html
+++ b/src/app/medidor/page/listar/listar.html
@@ -5,6 +5,18 @@
         <div class="overflow-x-auto border rounded-lg shadow-sm">
           <table class="min-w-full divide-y divide-gray-200 text-sm">
             <thead class="bg-gray-100">
+               <tr>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text" placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text" placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
+    <th></th>
+  </tr>
               <tr>
                 <th class="px-4 py-2 text-left font-medium text-gray-700">Código Cliente</th>
                 <th class="px-4 py-2 text-left font-medium text-gray-700">CI</th>
@@ -43,48 +55,14 @@
               <!-- Agrega más filas según necesites -->
             </tbody>
           </table>
-          <div class="mt-4 flex justify-center items-center space-x-1">
-            <!-- Botón Anterior -->
-            <button (click)="cambiarPagina(pagina - 1)" [disabled]="pagina === 1"
-              class="px-3 py-1 bg-gray-200 rounded disabled:opacity-50">Anterior</button>
-
-            <!-- Primera página y "..." si hace falta -->
-
-            @if (paginasVisibles[0] > 1) {
-            <button (click)="cambiarPagina(1)" class="px-3 py-1 bg-gray-200 rounded">1</button>
-            }
-
-            @if (paginasVisibles[0] > 2) {
-            <span>...</span>
-            }
-
-            @for (p of paginasVisibles; track $index) {
-            <button (click)="cambiarPagina(p)"
-              [ngClass]="{'bg-blue-500 text-white': pagina === p, 'bg-gray-200 text-gray-700': pagina !== p}"
-              class="px-3 py-1 rounded">
-              {{ p }}
-            </button>
-            }
-
-
-            @if (paginasVisibles[0] > 1) {
-            <button (click)="cambiarPagina(1)" class="px-3 py-1 bg-gray-200 rounded">1</button>
-            }
-
-            @if (paginasVisibles[paginasVisibles.length - 1] < paginas - 1) { <span>...</span>
-              }
-              <!-- "..." y última página si hace falta -->
-              @if (paginasVisibles[paginasVisibles.length - 1] < paginas) { <button (click)="cambiarPagina(paginas)"
-                class="px-3 py-1 bg-gray-200 rounded">{{ paginas }}</button>
-                }
-
-
-
-                <!-- Botón Siguiente -->
-                <button (click)="cambiarPagina(pagina + 1)" [disabled]="pagina === paginas"
-                  class="px-3 py-1 bg-gray-200 rounded disabled:opacity-50">Siguiente</button>
-          </div>
-
+      <mat-paginator
+      [length]="paginas"
+      [pageSize]="1"
+      [pageSizeOptions]="[1]"
+      (page)="onPageChange($event)"
+      aria-label="Select page"
+    >
+    </mat-paginator>
         </div>
       </div>
     </div>
