--- a/src/app/medidor/page/listar/listar.html
+++ b/src/app/medidor/page/listar/listar.html
@@ -1,22 +1,72 @@
-<div class="w-full h-screen p-4 bg-gray-50 overflow-auto">
+<div>
   <div class="w-full h-full max-w-full mx-auto">
     <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
       <div class="md:col-span-12 order-1">
-        <div class="overflow-x-auto border rounded-lg shadow-sm">
+        <div class="overflow-x-auto  rounded-lg shadow-sm">
           <table class="min-w-full divide-y divide-gray-200 text-sm">
             <thead class="bg-gray-100">
-               <tr>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text" placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text" placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th><input type="text"  placeholder="Buscar" class="w-full px-2 py-1 border rounded" /></th>
-    <th></th>
-  </tr>
+              <tr>
+                <th>
+                  <input [(ngModel)]="codigo" type="text" placeholder="Código"
+                    class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <input [(ngModel)]="ci" type="text" placeholder="CI" class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <input [(ngModel)]="nombre" type="text" placeholder="Nombre"
+                    class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <input [(ngModel)]="apellidoPaterno" type="text" placeholder="Apellido Paterno"
+                    class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <input [(ngModel)]="apellidoMaterno" type="text" placeholder="Apellido Materno"
+                    class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <input [(ngModel)]="direccion" type="text" placeholder="Dirección"
+                    class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <input [(ngModel)]="numeroMedidor" type="text" placeholder="N° Medidor"
+                    class="w-full px-2 py-1 border rounded" />
+                </th>
+
+                <th>
+                  <select [(ngModel)]="tarifa"
+                    class="w-full px-3 py-2 border
+                                                   border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <option value="">Todos</option>
+                    @for (item of tarifas$ | async; track $index) {
+                    <option value={{item._id}}>{{item.nombre}}</option>
+                    }
+
+                  </select>
+                </th>
+
+                <th>
+                  <select [(ngModel)]="estado" class="w-full rounded-lg border border-gray-300 px-2 py-1">
+                    <option value="">Todos</option>
+                    <option value="ACTIVO">ACTIVO</option>
+                    <option value="INACTIVO">INACTIVO</option>
+                    <option value="MANTENIMIENTO">MANTENIMIENTO</option>
+                    <option value="EN_CORTE">EN CORTE</option>
+                  </select>
+                </th>
+
+                <th>
+                  <button (click)="btnBuscar()"
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buscar</button>
+                </th>
+              </tr>
               <tr>
                 <th class="px-4 py-2 text-left font-medium text-gray-700">Código Cliente</th>
                 <th class="px-4 py-2 text-left font-medium text-gray-700">CI</th>
@@ -55,14 +105,9 @@
               <!-- Agrega más filas según necesites -->
             </tbody>
           </table>
-      <mat-paginator
-      [length]="paginas"
-      [pageSize]="1"
-      [pageSizeOptions]="[1]"
-      (page)="onPageChange($event)"
-      aria-label="Select page"
-    >
-    </mat-paginator>
+          <mat-paginator [length]="paginas" [pageSize]="1" [pageSizeOptions]="[1]" (page)="onPageChange($event)"
+            aria-label="Select page">
+          </mat-paginator>
         </div>
       </div>
     </div>
