--- a/src/app/lectura/page/realizar-lectura/realizar-lectura.html
+++ b/src/app/lectura/page/realizar-lectura/realizar-lectura.html
@@ -5,88 +5,106 @@
       Crear Lectura
     </h2>
 
-    <form class="space-y-5">
 
-      <!-- Número de medidor -->
-      <div class="w-full">
-        <label for="numeroMedidor" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
-          Número de Medidor
-        </label>
-        <input id="numeroMedidor" type="text" placeholder="Ingrese número de medidor"
-          class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition text-sm sm:text-base"
-          value="M001" readonly>
-      </div>
 
-      <!-- Información del cliente -->
-      <div class="p-4 sm:p-5 bg-gray-50 rounded-lg border border-gray-200">
-        <div class="space-y-2">
-          <p class="text-sm sm:text-base">
-            <strong class="text-gray-700">Nombre:</strong>
-            <span class="ml-2 text-gray-600">Juan Pérez Gómez</span>
-          </p>
-          <p class="text-sm sm:text-base">
-            <strong class="text-gray-700">Número de Medidor:</strong>
-            <span class="ml-2 text-gray-600">M001</span>
-          </p>
-          <p class="text-sm sm:text-base">
-            <strong class="text-gray-700">Estado:</strong>
-            <span class="ml-2 px-2 py-1 bg-red-100 text-red-700 rounded text-xs sm:text-sm font-medium">
-              Moroso
-            </span>
-          </p>
-        </div>
-      </div>
-
-      <!-- Año -->
-      <div class="w-full">
-        <label for="anio" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
-          Año
-        </label>
-        <select id="anio"
+    <!-- Número de medidor -->
+    <div class="w-full">
+      <label for="numeroMedidor" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
+        Número de Medidor
+      </label>
+      <div class="flex gap-2">
+        <input id="numeroMedidor" [(ngModel)]="numeroMedidor" type="text" placeholder="Ingrese número de medidor"
           class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition text-sm sm:text-base bg-white">
-          <option value="2025">2025</option>
-          <option value="2024">2024</option>
-          <option value="2023">2023</option>
-        </select>
+        <button type="button" (click)="buscarMedidor()"
+          class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
+          Buscar
+        </button>
       </div>
+      @if(error){
+      <small class="text-red-500 text-sm">{{error}}</small>
+      }
+    </div>
 
-      <!-- Mes -->
-      <div class="w-full">
-        <label for="mes" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
-          Mes
-        </label>
-        <select id="mes"
-          class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition text-sm sm:text-base bg-white">
-          <option value="" disabled selected>-- Seleccione un mes --</option>
-          @for (item of mesesAno; track $index) {
-          <option value={{item}}>{{item}}</option>
-          }
 
-        </select>
+    <!-- Información del cliente -->
+    @if (lecturaCliente ) {
+    <div class="p-4 sm:p-5 bg-gray-50 rounded-lg border border-gray-200">
+      <div class="space-y-2">
+        <p class="text-sm sm:text-base">
+          <strong class="text-gray-700">Nombre:</strong>
+          <span class="ml-2 text-gray-600">{{lecturaCliente.nombre}}</span>
+        </p>
+        <p class="text-sm sm:text-base">
+          <strong class="text-gray-700">Número de Medidor:</strong>
+          <span class="ml-2 text-gray-600">{{lecturaCliente.numeroMedidor}}</span>
+        </p>
+        <p class="text-sm sm:text-base">
+          <strong class="text-gray-700">Estado:</strong>
+          <span class="ml-2 px-2 py-1 bg-red-100 text-red-700 rounded text-xs sm:text-sm font-medium">
+            {{lecturaCliente.estado}}
+          </span>
+        </p>
       </div>
+    </div>
 
+    }
+    <!-- Año -->
+    <div class="w-full">
+      <label for="anio" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
+        Año
+      </label>
+      <select id="anio" [(ngModel)]="gestion"
+        class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition text-sm sm:text-base bg-white">
+        @for (item of gestiones; track $index) {
+        <option value={{item}}>{{item}}</option>
+        }
+      </select>
+    </div>
+
+    <!-- Mes -->
+    <div class="w-full">
+      <label for="mes" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
+        Mes
+      </label>
+      <select id="mes" [(ngModel)]="mes"
+        class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition text-sm sm:text-base bg-white">
+        <option disabled selected>-- Seleccione un mes --</option>
+        @for (item of mesesAno; track $index) {
+        <option value={{item}}>{{item}}</option>
+        }
+
+      </select>
+    </div>
+    <form [formGroup]="formularioLectura" class="space-y-5">
       <!-- Lecturas -->
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-6">
         <div class="w-full">
           <label for="lecturaAnterior" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
             Lectura Anterior
           </label>
-          <input id="lecturaAnterior" type="number" placeholder="Lectura anterior"
+          <input formControlName="lecturaAnterior" id="lecturaAnterior" type="number" placeholder="Lectura anterior"
             class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg bg-gray-100 text-gray-600 text-right cursor-not-allowed text-sm sm:text-base"
-            value="150" readonly>
+            value={{lecturaCliente.lecturaActual}}>
+          @if(formularioLectura.get('lecturaAnterior')?.invalid && formularioLectura.get('lecturaAnterior')?.touched){
+          <small class="text-red-500">La lectura es obligatorio</small>
+          }
         </div>
         <div class="w-full">
           <label for="lecturaActual" class="block mb-2 font-medium text-gray-700 text-sm sm:text-base">
             Lectura Actual
           </label>
-          <input id="lecturaActual" type="number" placeholder="Ingrese lectura actual"
+          <input formControlName="lecturaActual" id="lecturaActual" type="number" placeholder="Ingrese lectura actual"
             class="w-full p-2.5 sm:p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition text-sm sm:text-base">
+          @if(formularioLectura.get('lecturaActual')?.invalid && formularioLectura.get('lecturaActual')?.touched){
+          <small class="text-red-500">La lectura es obligatorio</small>
+          }
+
         </div>
       </div>
 
       <!-- Botón Guardar -->
       <div class="pt-2 flex justify-center">
-        <button type="submit"
+        <button type="submit" (click)="btnRegistrarLectura()"
           class="w-full sm:w-auto sm:min-w-[200px] bg-blue-600 text-white px-6 py-2.5 sm:py-3 rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors font-medium text-sm sm:text-base shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-blue-400">
           Guardar
         </button>
