--- a/src/app/lectura/page/listar/listar.html
+++ b/src/app/lectura/page/listar/listar.html
@@ -8,9 +8,7 @@
       <tr class="bg-gray-50">
         <!-- Código -->
         <th class="px-3 py-2">
-          <input type="text" name="codigo" placeholder="Código" class="w-full rounded-lg border border-gray-300 px-3 py-2 text-sm
-                 focus:border-blue-500 focus:ring-2 focus:ring-blue-200
-                 placeholder-gray-400" />
+          
         </th>
 
         <!-- Mes (vacío o futuro filtro) -->
@@ -39,7 +37,9 @@
           <button class="w-full flex items-center justify-center gap-2
                  rounded-lg bg-blue-600 px-4 py-2 text-sm font-semibold text-white
                  hover:bg-blue-700 transition-colors
-                 focus:outline-none focus:ring-2 focus:ring-blue-300">
+                 focus:outline-none focus:ring-2 focus:ring-blue-300"
+                 (click)="listarLecturas()"
+                 >
             🔍 Buscar
           </button>
         </th>
@@ -56,63 +56,28 @@
       </tr>
     </thead>
     <tbody class="divide-y divide-gray-200 bg-white text-sm">
-
-      <!-- Lectura 1 -->
-      <tr>
-        <td class="px-4 py-2">M001</td>
-        <td class="px-4 py-2">Enero 2025</td>
-        <td class="px-4 py-2">100</td>
-        <td class="px-4 py-2">150</td>
-        <td class="px-4 py-2">50</td>
-        <td class="px-4 py-2">$50</td>
+         @for (item of listarLecturas$ | async; track $index) {
+          <tr>
+        <td class="px-4 py-2">{{item.numeroMedidor}}</td>
+        <td class="px-4 py-2">{{item.mes}}-{{item.gestion}}</td>
+        <td class="px-4 py-2">{{item.lecturaAnterior}}</td>
+        <td class="px-4 py-2">{{item.lecturaActual}}</td>
+        <td class="px-4 py-2">{{item.consumoTotal}}</td>
+        <td class="px-4 py-2">bs {{item.costoApagar}}</td>
         <td class="px-4 py-2 space-x-2">
           <button class="bg-yellow-400 text-white px-2 py-1 rounded hover:bg-yellow-500 text-xs">Editar</button>
           <button class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 text-xs">Eliminar</button>
         </td>
       </tr>
-
-      <!-- Lectura 2 -->
-      <tr>
-        <td class="px-4 py-2">M001</td>
-        <td class="px-4 py-2">Febrero 2025</td>
-        <td class="px-4 py-2">150</td>
-        <td class="px-4 py-2">200</td>
-        <td class="px-4 py-2">50</td>
-        <td class="px-4 py-2">$45</td>
-        <td class="px-4 py-2 space-x-2">
-          <button class="bg-yellow-400 text-white px-2 py-1 rounded hover:bg-yellow-500 text-xs">Editar</button>
-          <button class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 text-xs">Eliminar</button>
-        </td>
-      </tr>
-
-      <!-- Lectura 3 -->
-      <tr>
-        <td class="px-4 py-2">M002</td>
-        <td class="px-4 py-2">Enero 2025</td>
-        <td class="px-4 py-2">50</td>
-        <td class="px-4 py-2">80</td>
-        <td class="px-4 py-2">30</td>
-        <td class="px-4 py-2">$30</td>
-        <td class="px-4 py-2 space-x-2">
-          <button class="bg-yellow-400 text-white px-2 py-1 rounded hover:bg-yellow-500 text-xs">Editar</button>
-          <button class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 text-xs">Eliminar</button>
-        </td>
-      </tr>
-
-      <!-- Lectura 4 -->
-      <tr>
-        <td class="px-4 py-2">M002</td>
-        <td class="px-4 py-2">Febrero 2025</td>
-        <td class="px-4 py-2">80</td>
-        <td class="px-4 py-2">100</td>
-        <td class="px-4 py-2">20</td>
-        <td class="px-4 py-2">$25</td>
-        <td class="px-4 py-2 space-x-2">
-          <button class="bg-yellow-400 text-white px-2 py-1 rounded hover:bg-yellow-500 text-xs">Editar</button>
-          <button class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 text-xs">Eliminar</button>
-        </td>
-      </tr>
-
+         }
+     
     </tbody>
   </table>
+<mat-paginator
+  [length]="totalPaginas"
+  [pageSize]="20"
+
+  (page)="onPageChange($event)">
+</mat-paginator>
+
 </div>
