--- a/src/app/app.html
+++ b/src/app/app.html
@@ -45,15 +45,15 @@
         </button>
         @if(expandedMenus['medidor']) {
         <div class="ml-6 flex flex-col">
-          <a routerLink="/crea/medidor" class="flex items-center p-2 hover:bg-gray-100">
+          <a routerLink="/medidor/crear" class="flex items-center p-2 hover:bg-gray-100">
             <span class="material-icons text-sm">add</span>
             <span class="ml-2 text-sm">Crear</span>
           </a>
-          <a routerLink="/listar/medidor" class="flex items-center p-2 hover:bg-gray-100">
+          <a routerLink="/medidor/listar" class="flex items-center p-2 hover:bg-gray-100">
             <span class="material-icons text-sm">list</span>
             <span class="ml-2 text-sm">Listar</span>
           </a>
-          <a routerLink="/listar/medidores/morosos" class="flex items-center p-2 hover:bg-gray-100">
+          <a routerLink="/medidor/moroso" class="flex items-center p-2 hover:bg-gray-100">
             <span class="material-icons text-sm">list</span>
             <span class="ml-2 text-sm">Morosos</span>
           </a>
@@ -75,11 +75,11 @@
         </button>
         @if(expandedMenus['lecturas']) {
         <div class="ml-6 flex flex-col">
-          <a routerLink="/crear/lectura" class="flex items-center p-2 hover:bg-gray-100">
+          <a routerLink="/lectura/realizar" class="flex items-center p-2 hover:bg-gray-100">
             <span class="material-icons text-sm">add</span>
             <span class="ml-2 text-sm">Crear</span>
           </a>
-          <a routerLink="/listar/lectura" class="flex items-center p-2 hover:bg-gray-100">
+          <a routerLink="/lectura/listar" class="flex items-center p-2 hover:bg-gray-100">
             <span class="material-icons text-sm">list</span>
             <span class="ml-2 text-sm">Listar</span>
           </a>
@@ -99,12 +99,15 @@
             {{ expandedMenus['tarifa'] ? 'expand_less' : 'expand_more' }}
           </span>
         </button>
-        <div *ngIf="expandedMenus['tarifa']" class="ml-6 flex flex-col">
-          <a routerLink="/listar/tarifas" class="flex items-center p-2 hover:bg-gray-100">
+        @if (expandedMenus['tarifa']) {
+          <div class="ml-6 flex flex-col">
+          <a routerLink="/tarifa/listar" class="flex items-center p-2 hover:bg-gray-100">
             <span class="material-icons text-sm">list</span>
             <span class="ml-2 text-sm">Listar tarifas</span>
           </a>
         </div>
+        }
+        
       </div>
 
       <!-- Gastos -->
